--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,3 +8,10 @@ version: 2
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
    configuration: docs/conf.py
+python:
+  version: "3.7"
+  install:
+    - requirements: docs/requirements.txt
+    - method: pip
+      path: .
+  system_packages: true
